# MakeMeTalk

./: .gitignore  README.md  pyproject.toml
src/makemetalk/: .env.template  app.py  audiogenerator.py  bio_prompts.py  biography.py  digital-human.py  fluxgenerator.py  openai_appearance.py  openai_lifestory.py  operate_user_bio.py  promptmodifier.py  requirements_fp8.txt  run_talk.py  speechanimator.py
src/makemetalk/configs/: pulid_config.yaml
src/makemetalk/configs/prompts/: animation_acc.yaml
src/makemetalk/data/: biography.json
src/makemetalk/echomimic_src/models/: face_locator.py  mutual_self_attention.py  positionnet.py  transformer_2d.py  unet_2d_condition.py
src/makemetalk/echomimic_src/pipelines/: pipeline_echo_mimic.py  pipeline_echo_mimic_acc.py  pipeline_echo_mimic_pose.py  pipeline_echo_mimic_pose_acc.py
src/makemetalk/echomimic_src/utils/: util.py
src/makemetalk/pulid/: pipeline_flux.py
