[project]
name = "makemetalk"
version = "0.1.0"
description = "Make me tell a story"
authors = [
    {name = "Svetlana Korobkova", email = "kyria.annwyn@gmail.com"}
]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "2.4.1"
torchvision = "0.19.1"
torchaudio = "2.4.1"
transformers = "4.48.1"
diffusers = "0.30.0"
accelerate = "0.26.1"
optimum-quanto = "0.2.4"
timm = "1.0.14"
einops = "0.8.1"
ftfy = "6.3.1"
facexlib = "0.3.0"
SentencePiece = "0.2.0"
safetensors = "0.5.2"
torchsde = "0.2.6"
numpy = "1.26.0"
huggingface-hub = "0.25.1"
opencv-python = "4.11.0.86"
insightface = "0.7.3"
onnxruntime = "1.20.1"
onnxruntime-gpu = "1.20.1"
python-dotenv = "1.0.0"
httpx = {extras = ["socks"], version = "^0.27.2"}
pillow-heif = "0.16.0"
instructor = "1.7.2"
openai = "^1.13.3"
gradio = "^4.0.0"
mediapipe = "0.10.21"
torchmetrics = "1.6.1"
#torchtyping = "0.1.5"
tqdm = "4.67.1"
ffmpeg-python = "0.2.0"
facenet_pytorch = "2.5.0"
moviepy = "1.0.3"
omegaconf = "2.3.0"
av = "11.0.0"
bitsandbytes = "0.45.2"
blobfile = "3.0.0"
inflect = "7.5.0"
kanjize = "1.5.0"
phonemizer = "3.3.0"
sudachidict-full = "20241021"
sudachipy = "0.6.10"
soundfile = "0.13.1"



[build-system]
requires = ["poetry-core", "torch"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [{include = "makemetalk", from = "src"}]

